--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -1,17 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@800&display=swap'); // font-family : Poppins; font-family : Lato;
 @import url('./Normalize.css');
-html,
-body {
-    margin: 0;
-    padding: 0;
-}
-
 #navbar {
     background-color: #EEEEEE;
+    padding: 20px;
+    display: grid;
     a {
         font-family: Lato;
+        width: 10vw;
+        text-align: center;
+        font-size: 1.5rem;
+        grid-row: 1;
+        grid-column: 8/10;
         &:first-child {
+            font-size: 2rem;
             font-family: Poppins;
+            grid-column: 1/10;
+        }
+        &:last-child {
+            grid-column: 9/10;
         }
     }
 }
