--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -5,6 +5,7 @@
     padding: 20px;
     display: grid;
     a {
+        transition: 500ms;
         font-family: Lato;
         width: 10vw;
         text-align: center;
@@ -18,6 +19,38 @@
         }
         &:last-child {
             grid-column: 9/10;
+        }
+        &:hover {
+            background-color: #C6C6C6;
+        }
+    }
+    li {
+        list-style-type: none;
+        font-family: Lato;
+        width: 10vw;
+        text-align: center;
+        font-size: 1.5rem;
+        grid-row: 1;
+        grid-column: 8/10;
+        &>ul {
+            display: none;
+            position: absolute;
+            z-index: 50;
+            top: 1.5rem;
+            transition: 500ms;
+            background-color: #d9d9d9;
+            width: 10vw;
+        }
+        &:hover {
+            &:hover {
+                background-color: #C6C6C6;
+            }
+            &>ul {
+                display: block;
+                &:hover {
+                    background-color: #C6C6C6;
+                }
+            }
         }
     }
 }
