--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -32,11 +32,13 @@
         font-size: 1.5rem;
         grid-row: 1;
         grid-column: 8/10;
+        position: relative;
         &>ul {
+            padding-left: 0;
             display: none;
             position: absolute;
             z-index: 50;
-            top: 1.5rem;
+            top: 10px;
             transition: 500ms;
             background-color: #d9d9d9;
             width: 10vw;
@@ -47,9 +49,6 @@
             }
             &>ul {
                 display: block;
-                &:hover {
-                    background-color: #C6C6C6;
-                }
             }
         }
     }
