--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -53,3 +53,9 @@
         }
     }
 }
+footer{
+    background-color: #EEEEEE;
+    padding: 20px;
+    font-size: large;
+    text-align: center;
+}
