--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -1,114 +1,69 @@
-    @import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@800&display=swap'); // font-family : Poppins; font-family : Lato;
-    @import url('./Normalize.css');
-     :root {
-        background-color: #C6C6C6;
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@800&display=swap'); // font-family : Poppins; font-family : Lato;
+@import url('./Normalize.css');
+    :root {
+    background-color: #C6C6C6;
+}
+
+
+#navbar {
+    background-color: #EEEEEE;
+    display: flex;
+    div {
+        flex-grow: 1;
     }
-    
-    .red_button {
+    a {
+        transition: 500ms;
         padding: 20px;
-        background-color: #FF6262;
-        color: white;
-        border: none;
-        width: calc(100vw / 5);
-        font-size: 1.25rem;
-        border-radius: 2vh;
+        font-family: 'Lato';
+        text-align: center;
+        font-size: 1.5rem;
+        &:first-child {
+            font-size: 2rem;
+            font-family: 'Poppins';
+            &:hover {
+                background-color: #EEEEEE;
+            }
+            &:hover {
+                background-color: #EEEEEE;
+            }
+        }
         &:hover {
-            background-color: lighten($color: #FF6262, $amount: 5);
-            cursor: pointer;
+            background-color: #C6C6C6;
         }
-    }
-    
-    #navbar {
-        background-color: #EEEEEE;
-        display: flex;
-        div {
-            flex-grow: 1;
-        }
-        a {
-            transition: 500ms;
-            padding: 20px;
-            font-family: Lato;
+        li {
+            list-style-type: none;
+            font-family: 'Lato';
+            width: 10vw;
             text-align: center;
             font-size: 1.5rem;
-            &:first-child {
-                font-size: 2rem;
-                font-family: Poppins;
-                &:hover {
-                    background-color: #EEEEEE;
-                }
-                &:hover {
-                    background-color: #EEEEEE;
-                }
+            grid-row: 1;
+            position: relative;
+            &>ul {
+                padding-left: 0;
+                display: none;
+                position: absolute;
+                z-index: 50;
+                top: 10px;
+                transition: 500ms;
+                background-color: #d9d9d9;
+                width: 10vw;
             }
             &:hover {
                 background-color: #C6C6C6;
-            }
-            li {
-                list-style-type: none;
-                font-family: Lato;
-                width: 10vw;
-                text-align: center;
-                font-size: 1.5rem;
-                grid-row: 1;
-                position: relative;
                 &>ul {
-                    padding-left: 0;
-                    display: none;
-                    position: absolute;
-                    z-index: 50;
-                    top: 10px;
-                    transition: 500ms;
-                    background-color: #d9d9d9;
-                    width: 10vw;
-                }
-                &:hover {
-                    background-color: #C6C6C6;
-                    &>ul {
-                        display: block;
-                    }
+                    display: block;
                 }
             }
         }
     }
-    
-    #login {
-        width: 100vw;
-        text-align: center;
-        font-family: Lato;
-        overflow: hidden;
-        &>h1 {
-            margin-top: 15vh;
-            font-weight: normal;
-            color: #676767;
-            font-size: 1.75rem;
-        }
-        input {
-            border: none;
-            width: calc(100vw / 4);
-            font-size: 1.25rem;
-            border-radius: 10px;
-            background-color: white;
-            color: #676767;
-            margin-bottom: 3vh;
-            padding: 20px;
-            &:hover,
-            &:focus {
-                outline: none;
-            }
-        }
-        button {
-            @extend .red_button;
-        }
-    }
-    
-    section {
-        min-height: calc(100vh - 3.5rem - 80px);
-    }
-    
-    footer {
-        font-family: Lato;
-        background-color: #EEEEEE;
-        padding: 20px;
-        font-size: 1rem;
-        text-align: center;
-    }
+}
+
+
+
+footer {
+    font-family: 'Lato';
+    background-color: #EEEEEE;
+    padding: 20px;
+    font-size: 1rem;
+    text-align: center;
+}
