--- a/html/css/MediaPhoto.css
+++ b/html/css/MediaPhoto.css
@@ -4,61 +4,118 @@
   background-color: #C6C6C6;
 }
 
+.red_button, #login button {
+  padding: 20px;
+  background-color: #FF6262;
+  color: white;
+  border: none;
+  width: 20vw;
+  font-size: 1.25rem;
+  border-radius: 2vh;
+}
+.red_button:hover, #login button:hover {
+  background-color: #ff7c7c;
+  cursor: pointer;
+}
+
 #navbar {
   background-color: #EEEEEE;
   display: flex;
 }
-#navbar div {
+#navbar > div {
   flex-grow: 1;
 }
-#navbar a {
+#navbar > a {
   transition: 500ms;
   padding: 20px;
-  font-family: "Lato";
+  font-family: Lato;
   text-align: center;
   font-size: 1.5rem;
 }
-#navbar a:first-child {
+#navbar > a:first-child {
+  position: absolute;
   font-size: 2rem;
-  font-family: "Poppins";
+  font-family: Poppins;
 }
-#navbar a:first-child:hover {
-  background-color: #EEEEEE;
+#navbar > a:first-child:hover {
+  background-color: transparent;
 }
-#navbar a:first-child:hover {
-  background-color: #EEEEEE;
-}
-#navbar a:hover {
+#navbar > a:hover {
   background-color: #C6C6C6;
 }
-#navbar a li {
-  list-style-type: none;
-  font-family: "Lato";
-  width: 10vw;
+#navbar > li {
+  list-style: none;
+  transition: 500ms;
+  padding: 20px;
+  font-family: Lato;
   text-align: center;
   font-size: 1.5rem;
-  grid-row: 1;
   position: relative;
 }
-#navbar a li > ul {
+#navbar > li > ul, #navbar > li > ul > li {
+  font-size: 1.25rem;
+  list-style: none;
   padding-left: 0;
   display: none;
   position: absolute;
   z-index: 50;
-  top: 10px;
+  top: 3rem;
   transition: 500ms;
   background-color: #d9d9d9;
-  width: 10vw;
+  width: 100%;
+  left: 0;
 }
-#navbar a li:hover {
+#navbar > li > ul > :hover, #navbar > li > ul > li > :hover {
+  background-color: #EEEEEE;
+}
+#navbar > li:hover {
   background-color: #C6C6C6;
 }
-#navbar a li:hover > ul {
+#navbar > li:hover > ul {
   display: block;
 }
 
+.mobile_menu {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: #FF6262;
+  z-index: 200;
+}
+
+#login {
+  width: 100vw;
+  text-align: center;
+  font-family: Lato;
+  overflow: hidden;
+}
+#login > h1 {
+  margin-top: 15vh;
+  font-weight: normal;
+  color: #676767;
+  font-size: 1.75rem;
+}
+#login input {
+  border: none;
+  width: 25vw;
+  font-size: 1.25rem;
+  border-radius: 10px;
+  background-color: white;
+  color: #676767;
+  margin-bottom: 3vh;
+  padding: 20px;
+}
+#login input:hover, #login input:focus {
+  outline: none;
+}
+section {
+  min-height: calc(100vh - 3.5rem - 80px);
+}
+
 footer {
-  font-family: "Lato";
+  font-family: Lato;
   background-color: #EEEEEE;
   padding: 20px;
   font-size: 1rem;
