--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -1,52 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@800&display=swap'); // font-family : Poppins; font-family : Lato;
-@import url('./Normalize.css');
-    :root {
-    background-color: #C6C6C6;
-}
-
-
-#navbar {
-    background-color: #EEEEEE;
-    display: flex;
-    div {
-        flex-grow: 1;
+    @import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@800&display=swap'); // font-family : Poppins; font-family : Lato;
+    @import url('./Normalize.css');
+     :root {
+        background-color: #C6C6C6;
     }
-    a {
-        transition: 500ms;
+    
+    .red_button {
         padding: 20px;
-        font-family: 'Lato';
-        text-align: center;
-        font-size: 1.5rem;
-        &:first-child {
-            font-size: 2rem;
-            font-family: 'Poppins';
-            &:hover {
-                background-color: #EEEEEE;
-            }
-            &:hover {
-                background-color: #EEEEEE;
-            }
-        }
+        background-color: #FF6262;
+        color: white;
+        border: none;
+        width: calc(100vw / 5);
+        font-size: 1.25rem;
+        border-radius: 2vh;
         &:hover {
-            background-color: #C6C6C6;
+            background-color: lighten($color: #FF6262, $amount: 5);
+            cursor: pointer;
         }
-        li {
-            list-style-type: none;
-            font-family: 'Lato';
-            width: 10vw;
+    }
+    
+    #navbar {
+        background-color: #EEEEEE;
+        display: flex;
+        &>div {
+            flex-grow: 1;
+        }
+        &>a {
+            transition: 500ms;
+            padding: 20px;
+            font-family: Lato;
             text-align: center;
             font-size: 1.5rem;
-            grid-row: 1;
+            &:first-child {
+                position: absolute;
+                font-size: 2rem;
+                font-family: Poppins;
+                &:hover {
+                    background-color: transparent;
+                }
+            }
+            &:hover {
+                background-color: #C6C6C6;
+            }
+        }
+        &>li {
+            list-style: none;
+            transition: 500ms;
+            padding: 20px;
+            font-family: Lato;
+            text-align: center;
+            font-size: 1.5rem;
             position: relative;
-            &>ul {
+            &>ul,
+            &>ul>li {
+                font-size: 1.25rem;
+                list-style: none;
                 padding-left: 0;
                 display: none;
                 position: absolute;
                 z-index: 50;
-                top: 10px;
+                top: 3rem;
                 transition: 500ms;
                 background-color: #d9d9d9;
-                width: 10vw;
+                width: 100%;
+                left: 0;
+                &>:hover {
+                    background-color: #EEEEEE;
+                }
             }
             &:hover {
                 background-color: #C6C6C6;
@@ -56,14 +75,55 @@
             }
         }
     }
-}
-
-
-
-footer {
-    font-family: 'Lato';
-    background-color: #EEEEEE;
-    padding: 20px;
-    font-size: 1rem;
-    text-align: center;
-}
+    
+    .mobile_menu {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background-color: #FF6262;
+        z-index: 200;
+    }
+    
+    #login {
+        width: 100vw;
+        text-align: center;
+        font-family: Lato;
+        overflow: hidden;
+        &>h1 {
+            margin-top: 15vh;
+            font-weight: normal;
+            color: #676767;
+            font-size: 1.75rem;
+        }
+        input {
+            border: none;
+            width: calc(100vw / 4);
+            font-size: 1.25rem;
+            border-radius: 10px;
+            background-color: white;
+            color: #676767;
+            margin-bottom: 3vh;
+            padding: 20px;
+            &:hover,
+            &:focus {
+                outline: none;
+            }
+        }
+        button {
+            @extend .red_button;
+        }
+    }
+    
+    section {
+        min-height: calc(100vh - 3.5rem - 80px);
+    }
+    
+    footer {
+        font-family: Lato;
+        background-color: #EEEEEE;
+        padding: 20px;
+        font-size: 1rem;
+        text-align: center;
+    }
