--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -121,7 +121,7 @@
     }
     
     footer {
-        font-family: Lato;
+        font-family: 'Lato';
         background-color: #EEEEEE;
         padding: 20px;
         font-size: 1rem;
