--- a/html/css/Gallery.scss
+++ b/html/css/Gallery.scss
@@ -18,6 +18,11 @@ section > div:first-child {
     }
 }
 
+#vide{
+    font-family: 'Lato';
+    text-align: center;
+}
+
 .container-grid {
     display: grid;
     justify-items: center;
