--- a/html/css/MediaPhoto.css
+++ b/html/css/MediaPhoto.css
@@ -4,6 +4,20 @@
   background-color: #C6C6C6;
 }
 
+.red_button, #login button {
+  padding: 20px;
+  background-color: #FF6262;
+  color: white;
+  border: none;
+  width: 20vw;
+  font-size: 1.25rem;
+  border-radius: 2vh;
+}
+.red_button:hover, #login button:hover {
+  background-color: #ff7c7c;
+  cursor: pointer;
+}
+
 #navbar {
   background-color: #EEEEEE;
   display: flex;
@@ -69,6 +83,35 @@
   left: 0;
   background-color: #FF6262;
   z-index: 200;
+}
+
+#login {
+  width: 100vw;
+  text-align: center;
+  font-family: Lato;
+  overflow: hidden;
+}
+#login > h1 {
+  margin-top: 15vh;
+  font-weight: normal;
+  color: #676767;
+  font-size: 1.75rem;
+}
+#login input {
+  border: none;
+  width: 25vw;
+  font-size: 1.25rem;
+  border-radius: 10px;
+  background-color: white;
+  color: #676767;
+  margin-bottom: 3vh;
+  padding: 20px;
+}
+#login input:hover, #login input:focus {
+  outline: none;
+}
+section {
+  min-height: calc(100vh - 3.5rem - 80px);
 }
 
 footer {
