--- a/html/css/NewGallery.css
+++ b/html/css/NewGallery.css
@@ -44,6 +44,10 @@ section > form > button:hover {
   background-color: #ff7c7c;
 }
 
+footer {
+  position: absolute;
+}
+
 form > .users {
   margin-top: 2em;
 }
