--- a/html/css/NewImage.css
+++ b/html/css/NewImage.css
@@ -44,6 +44,10 @@ section > form > button:hover {
   background-color: #ff7c7c;
 }
 
+footer {
+  position: absolute;
+}
+
 #inputfile {
   display: none;
 }
