--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -27,7 +27,7 @@
         &>a {
             transition: 500ms;
             padding: 20px;
-            font-family: Lato;
+            font-family: 'Lato', sans-serif;
             text-align: center;
             font-size: 1.5rem;
             &:first-child {
@@ -84,36 +84,6 @@
         left: 0;
         background-color: #FF6262;
         z-index: 200;
-    }
-    
-    #login {
-        width: 100vw;
-        text-align: center;
-        font-family: Lato;
-        overflow: hidden;
-        &>h1 {
-            margin-top: 15vh;
-            font-weight: normal;
-            color: #676767;
-            font-size: 1.75rem;
-        }
-        input {
-            border: none;
-            width: calc(100vw / 4);
-            font-size: 1.25rem;
-            border-radius: 10px;
-            background-color: white;
-            color: #676767;
-            margin-bottom: 3vh;
-            padding: 20px;
-            &:hover,
-            &:focus {
-                outline: none;
-            }
-        }
-        button {
-            @extend .red_button;
-        }
     }
     
     section {
