--- a/html/css/Gallery.css
+++ b/html/css/Gallery.css
@@ -1,10 +1,36 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap%27");
 section {
   display: block;
-  min-height: 100%;
 }
 
-section > div:first-child {
+section > .container-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 2em;
+  margin-bottom: 2em;
+  font-family: "Lato", sans-serif;
+}
+section > .container-grid > a {
+  display: inline-block;
+}
+section > .container-grid > a > .gallery {
+  display: flex;
+  background-color: #D9D9D9;
+  border-radius: 20px;
+  padding: 20px;
+  max-width: 700px;
+  align-items: center;
+}
+section > .container-grid > a > .gallery > .gallery-description {
+  margin-left: 4em;
+}
+section > .container-grid > a > .gallery > img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+section > .mode {
   display: inline-block;
   background: #524F4F;
   padding: 1em;
@@ -13,38 +39,11 @@ section > div:first-child {
   font-weight: 400;
   border-radius: 10px;
 }
-section > div:first-child > a:last-child {
+section > .mode > a:last-child {
   color: #867F7F;
 }
 
 #vide {
   font-family: "Lato";
   text-align: center;
-}
-
-.container-grid {
-  display: grid;
-  justify-items: center;
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 2em;
-  margin-bottom: 2em;
-  font-family: "Lato", sans-serif;
-}
-.container-grid > a {
-  width: 700px;
-}
-.container-grid > a > .gallery {
-  display: flex;
-  background-color: #D9D9D9;
-  border-radius: 20px;
-  padding: 20px;
-  align-items: center;
-}
-.container-grid > a > .gallery > .gallery-description {
-  margin-left: 4em;
-}
-.container-grid > a > .gallery > img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
 }/*# sourceMappingURL=Gallery.css.map */
