--- a/html/css/Gallery.scss
+++ b/html/css/Gallery.scss
@@ -1,11 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap%27');
 
 section {
     display: block;
-    min-height: 100%;
 }
 
-section > div:first-child {
+
+section > .container-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 2em;
+    margin-bottom: 2em;
+    font-family: "Lato", sans-serif;
+
+    & > a {
+        display: inline-block;
+
+        & > .gallery {
+            display: flex;
+            background-color: #D9D9D9;
+            border-radius: 20px;
+            padding: 20px;
+            max-width: 700px;
+            align-items: center;
+
+            & > .gallery-description {
+                margin-left: 4em;
+            }
+
+            & > img {
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+            }
+        }
+    }
+}
+
+section > .mode {
     display: inline-block;
     background: #524F4F;
     padding: 1em;
@@ -22,35 +53,4 @@ section > div:first-child {
 #vide{
     font-family: 'Lato';
     text-align: center;
-}
-
-.container-grid {
-    display: grid;
-    justify-items: center;
-    grid-template-columns: repeat(2,1fr);
-    row-gap: 2em;
-    margin-bottom: 2em;
-    font-family: 'Lato', sans-serif;
-
-    & > a {
-        width: 700px;
-
-        & > .gallery {
-            display: flex;
-            background-color: #D9D9D9;
-            border-radius: 20px;
-            padding: 20px;
-            align-items: center;
-
-            & > .gallery-description {
-                margin-left: 4em;
-            }
-
-            & > img {
-                width: 100px;
-                height: 100px;
-                border-radius: 50%;
-            }
-        }
-    }
 }
