--- a/html/css/MediaPhoto.scss
+++ b/html/css/MediaPhoto.scss
@@ -33,7 +33,7 @@
             &:first-child {
                 position: absolute;
                 font-size: 2rem;
-                font-family: Poppins;
+                font-family: 'Poppins', sans-serif;
                 &:hover {
                     background-color: transparent;
                 }
@@ -46,7 +46,7 @@
             list-style: none;
             transition: 500ms;
             padding: 20px;
-            font-family: Lato;
+            font-family: 'Lato', sans-serif;
             text-align: center;
             font-size: 1.5rem;
             position: relative;
@@ -91,7 +91,7 @@
     }
     
     footer {
-        font-family: 'Lato';
+        font-family: 'Lato', sans-serif;
         background-color: #EEEEEE;
         padding: 20px;
         font-size: 1rem;
