--- a/html/css/MediaPhoto.css
+++ b/html/css/MediaPhoto.css
@@ -78,7 +78,7 @@
 #navbar > a, #navbar > div > a {
   transition: 500ms;
   padding: 20px;
-  font-family: "Lato", sans-serif;
+  font-family: Lato;
   text-align: center;
   font-size: 1.5rem;
 }
